local-path-provisioner/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-path-provisioner
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  template:
    spec:
      serviceAccountName: local-path-provisioner-service-account
      containers:
        - name: local-path-provisioner
          image: rancher/local-path-provisioner:v0.0.32
          command:
            - local-path-provisioner
            - --debug
            - start
            - --config
            - /etc/config/config.json
          resources:
            requests:
              cpu: 50m
              memory: 25Mi
            limits:
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /etc/config/
      volumes:
        - name: config
          configMap:
            name: local-path-config
